--- a/src/app/pages/home-page/home-page.html
+++ b/src/app/pages/home-page/home-page.html
@@ -1,10 +1,11 @@
 <div class="min-h-screen bg-neutral-950 text-white">
+  <lang-switcher />
   <!-- HERO -->
   <section class="max-w-6xl mx-auto px-6 pt-24 pb-20">
-    <h1 class="text-5xl md:text-6xl font-bold leading-tight mb-6">
-      Узнай, будешь ли ты миллионером к 40
-      <span class="text-green-400">или в вечных долгах</span>
-    </h1>
+    <h1
+      class="text-5xl md:text-6xl font-bold leading-tight mb-6"
+      [innerHTML]="'home.heroTitle' | translate"
+    ></h1>
 
     <p class="text-neutral-400 text-xl mb-10 max-w-2xl">
       Интерактивный симулятор финансовой жизни. Запусти свою жизнь на 20 лет и посмотри, куда
