--- a/src/app/pages/home-page/home-page.html
+++ b/src/app/pages/home-page/home-page.html
@@ -7,21 +7,21 @@
       [innerHTML]="'home.heroTitle' | translate"
     ></h1>
 
-    <p class="text-neutral-400 text-xl mb-10 max-w-2xl">
-      Интерактивный симулятор финансовой жизни. Запусти свою жизнь на 20 лет и посмотри, куда
-      приведут твои решения.
-    </p>
+    <p
+      class="text-neutral-400 text-xl mb-10 max-w-2xl"
+      [innerHTML]="'home.heroDesc' | translate"
+    ></p>
 
     <a
       routerLink="/simulator"
+      [innerHTML]="'home.getStarted' | translate"
       class="inline-block bg-white text-black font-semibold px-8 py-4 rounded-lg hover:bg-neutral-200 transition"
     >
-      Начать симуляцию бесплатно
     </a>
   </section>
 
   <!-- HOW IT WORKS -->
-  <section class="max-w-6xl mx-auto px-6 py-16">
+  <!-- <section class="max-w-6xl mx-auto px-6 py-16">
     <h2 class="text-3xl font-semibold mb-10">Как это работает</h2>
 
     <div class="grid md:grid-cols-3 gap-8">
@@ -43,10 +43,10 @@
         <div class="text-neutral-400 text-sm">Узнай, как выйти на финансовую свободу</div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- SOCIAL PROOF -->
-  <section class="max-w-6xl mx-auto px-6 py-16">
+  <!-- <section class="max-w-6xl mx-auto px-6 py-16">
     <h2 class="text-3xl font-semibold mb-10">Уже помогло другим</h2>
 
     <div class="grid md:grid-cols-3 gap-8">
@@ -65,10 +65,10 @@
         <div>Отказался от кредита на авто и ускорил рост капитала</div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- FINAL CTA -->
-  <section class="max-w-6xl mx-auto px-6 py-20 text-center">
+  <!-- <section class="max-w-6xl mx-auto px-6 py-20 text-center">
     <h2 class="text-4xl font-bold mb-6">Запусти свою симуляцию прямо сейчас</h2>
 
     <a
@@ -77,10 +77,10 @@
     >
       Начать бесплатно
     </a>
-  </section>
+  </section> -->
 
   <!-- FOOTER -->
-  <footer class="border-t border-neutral-800 py-6 text-center text-neutral-500">
+  <!-- <footer class="border-t border-neutral-800 py-6 text-center text-neutral-500">
     © 2026 Investor Simulator
-  </footer>
+  </footer> -->
 </div>
