✨ (app.routes.ts, simulator-page): добавлена новая страница симулятора финансовой грамотности ♻️ (cta.html, hero.html): заменены ссылки на компонент app-link для улучшения переиспользуемости 💡 (app-link.ts): добавлен новый компонент app-link для управления ссылками Создана новая страница симулятора, которая позволяет пользователям взаимодействовать с финансовыми сценариями. Компонент app-link улучшает переиспользуемость кода, заменяя стандартные ссылки на более универсальные. Это упрощает управление стилями и логикой ссылок в приложении.

--- a/src/app/modules/home-page/cta/cta.html
+++ b/src/app/modules/home-page/cta/cta.html
@@ -2,11 +2,12 @@
   <app-container class="text-center">
     <h2 class="text-4xl font-bold mb-6" [innerHTML]="'home.CTA.title' | translate"></h2>
 
-    <a
-      routerLink="/simulator"
-      [innerHTML]="'home.CTA.btnTitle' | translate"
-      class="inline-flex items-center justify-center bg-primary text-primary-foreground hover:opacity-90 font-semibold px-8 py-4 rounded-xl transition"
-    >
-    </a>
+    <app-link
+      [classList]="
+        'bg-primary text-primary-foreground hover:opacity-90 font-semibold px-8 py-4 rounded-xl'
+      "
+      [path]="'/simulator'"
+      [label]="'home.CTA.btnTitle' | translate"
+    ></app-link>
   </app-container>
 </section>
