--- a/src/app/modules/home-page/hero/hero.html
+++ b/src/app/modules/home-page/hero/hero.html
@@ -1,18 +1,16 @@
-<section class="pt-24 pb-20 bg-linear-to-b from-background to-muted/40">
-  <app-container>
-    <h1
-      class="text-5xl md:text-6xl font-bold leading-tight mb-6"
-      [innerHTML]="'home.heroTitle' | translate"
-    ></h1>
+<app-hero>
+  <h1
+    class="text-3xl md:text-6xl font-bold leading-tight mb-6"
+    [innerHTML]="'home.heroTitle' | translate"
+  ></h1>
 
-    <p class="text-xl mb-10 max-w-2xl" [innerHTML]="'home.heroDesc' | translate"></p>
+  <p class="text-lg mb-10 max-w-2xl" [innerHTML]="'home.heroDesc' | translate"></p>
 
-    <app-link
-      [classList]="
-        'bg-primary text-primary-foreground hover:opacity-90 font-semibold px-8 py-4 rounded-xl'
-      "
-      [path]="'/simulator'"
-      [label]="'home.getStarted' | translate"
-    ></app-link>
-  </app-container>
-</section>
+  <app-link
+    [classList]="
+      'bg-primary text-primary-foreground hover:opacity-90 font-semibold px-8 py-4 rounded-xl'
+    "
+    [path]="'/simulator'"
+    [label]="'home.getStarted' | translate"
+  ></app-link>
+</app-hero>
