--- a/src/app/modules/simulator-page/simulator-calculation/simulator-calculation.html
+++ b/src/app/modules/simulator-page/simulator-calculation/simulator-calculation.html
@@ -2,7 +2,7 @@
   <app-container>
     <div class="space-y-4">
       <ub-tabs
-        [items]="tabItems"
+        [items]="tabItems()"
         [active]="activeTab()"
         (activeChange)="setActiveTab($event)"
       ></ub-tabs>
