✨ (login): добавлены страницы входа и регистрации с формами 📝 (i18n): добавлены переводы для авторизации ♻️ (header): обновлен компонент заголовка для использования нового компонента ссылки Изменения включают добавление страниц для входа и регистрации, а также соответствующих форм. Это улучшает пользовательский опыт, позволяя пользователям легко входить в систему или создавать учетные записи. Переводы для новых текстов авторизации добавлены для поддержки многоязычности. Компонент заголовка обновлен для использования нового компонента ссылки, что улучшает структуру кода.

--- a/src/styles.css
+++ b/src/styles.css
@@ -63,6 +63,8 @@
   --sidebar-ring: oklch(0.871 0.006 286.286);
 
   --gray: @apply text-zinc-400;
+  --p-top: 24px;
+  --header-height: 57px;
 }
 
 .dark {
