--- a/src/app/modules/login-page/login-form/login-form.html
+++ b/src/app/modules/login-page/login-form/login-form.html
@@ -39,7 +39,9 @@
         }}</label>
 
         @if (authMode === 'login') {
-          <a routerLink="/forgot" class="text-sm text-primary hover:underline">Forgot password?</a>
+          <a routerLink="/forgot" class="text-sm text-primary hover:underline">{{
+            'authorization.forgot' | translate
+          }}</a>
         }
       </div>
 
